<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#D2B48C">

    <ImageView
        android:id="@+id/logoImageView"
        android:layout_width="238dp"
        android:layout_height="320dp"
        android:src="@drawable/coffeeshop"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo_description" />

    <TextView
        android:id="@+id/shopNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logoImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="0dp"
        android:text="@string/coffee_shop_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/reviewsContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/shopNameTextView"
        android:orientation="horizontal">

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="4.7"
            style="?android:attr/ratingBarStyleSmall" />

        <TextView
            android:id="@+id/reviewCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="6dp"
            android:text="@string/reviews_number"
            android:textAppearance="?attr/textAppearanceCaption" />

    </LinearLayout>


    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reviewsContainer"
        android:text="@string/shop_description" />

    <LinearLayout
        android:id="@+id/beanTypesContainer"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@id/descriptionTextView"
        android:layout_marginTop="94dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/vegetarianImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.8"
            android:contentDescription="@string/vegetarian_food_item"
            android:src="@drawable/vegetarian" />

        <ImageView
            android:id="@+id/naturalFoodImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/natural_food_icon"
            android:src="@drawable/natural_food" />

        <ImageView
            android:id="@+id/fairTradeImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/fair_trade_icon"
            android:src="@drawable/fair_trade" />

        <ImageView
            android:id="@+id/beanImageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:contentDescription="@string/bean_icon"
            android:src="@drawable/bean" />
    </LinearLayout>

    <Button
        android:id="@+id/callButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/beanTypesContainer"
        android:layout_marginTop="15dp"
        android:text="@string/make_a_call" />
</RelativeLayout>